src/objects/CM_Task__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Late_Formula__c</fullName>
        <formula>Today() - Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense__c</fullName>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Balance__c</fullName>
        <formula>Estimated_Expense__c - Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Balance__c</fullName>
        <formula>Estimated_Hours__c - Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If task is a Milestone check to true</inlineHelpText>
        <label>IsMilestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>if ( Complete__c == true, &apos;Complete&apos;,
if ( and( Days_Late_Formula__c &gt; 0, Blocked__c ),
if(Len( Text(Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(Task_Stage__c), &apos;Late &amp; Blocked&apos;),
if (Days_Late_Formula__c &gt; 0, 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(Task_Stage__c), &apos;Late&apos;),
if(Blocked__c == true, 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(Task_Stage__c), &apos;Blocked&apos;), 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Task</label>
        <referenceTo>CM_Task__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>Project</label>
        <referenceTo>CM_Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Dates__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Completion__c</fullName>
        <formula>( Total_Hours__c  /  Estimated_Hours__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Completion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Duration__c</fullName>
        <formula>DAY( Due_Date__c) -  DAY( Start_Dates__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Progress__c</fullName>
        <label>Task Progress</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <label>Total Expense</label>
        <summarizedField>CM_Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>CM_Expense__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>CM_Time__c.Hours__c</summarizedField>
        <summaryForeignKey>CM_Time__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Used_Expense__c</fullName>
        <formula>( Total_Expense__c /  Estimated_Expense__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Used Expense %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>color__c</fullName>
        <formula>IF( Overall_Status__c=&apos;Late In Progress&apos;,&apos;red&apos;,&apos;green&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <formula>TEXT(DAY(Due_Date__c ))+&quot;-&quot; +TEXT(MONTH(Due_Date__c ))+&quot;-&quot; +TEXT(YEAR(Due_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>progress__c</fullName>
        <formula>Task_Completion__c  / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <formula>TEXT(DAY(Start_Dates__c))+&quot;-&quot; +TEXT(MONTH(Start_Dates__c))+&quot;-&quot; +TEXT(YEAR(Start_Dates__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <formula>ProjectName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>text</label>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProjectName__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Dates__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Task_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>